--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-loading-skeleton": "^3.1.0",
     "react-slick": "^0.29.0",
     "rsuite": "^5.19.0",
+    "sharp": "^0.31.1",
     "slick-carousel": "^1.8.1",
     "swr": "^1.3.0"
   },
